--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,12 @@ img {
     padding-bottom: 25px;
 }
 
+.header-container {
+    display: flex;
+}
+
 .header-logo {
+    display: block;
     font-family: 'Raleway';
     font-weight: 700;
     font-size: 26px;
@@ -63,6 +68,10 @@ img {
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: var(--focus-color);
+}
+
+.header-list {
+    display: flex;
 }
 
 .header-link {
@@ -276,6 +285,11 @@ font-family: 'Raleway';
 
 /* ---------portfolio---------- */
 
+.navigation {
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+
 .navigation-btn {
     border: none;
     cursor: pointer;
@@ -298,12 +312,25 @@ font-family: 'Raleway';
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.portfolio {
+    padding-bottom: 94px;
+}
+
+.portfolio-item {
+    padding-bottom: 20px;
+}
+
+.portfolio-img {
+    margin-bottom: 20px;
+}
+
 .portfolio-title {
 font-weight: 700;
 font-size: 18px;
 line-height: 2;
 letter-spacing: 0.06em;
 color: var(--header-color);
+margin-bottom: 4px;
 }
 
 .portfolio-text {
